--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,44 @@
 *::after {
   box-sizing: border-box;
 }
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* remove list styles on ul, ol elements with a none style */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  background-color: var(--clr-neutral-800);
+}
+
+.card {
+  background-color: var(--clr-neutral-400);
+  width: 350px;
+  height: 596px;
+  margin-top: 152px;
+  margin-left: 545px;
+  padding: 24px;
+  border-radius: 15px;
+}
+
+.nft_picture {
+  width: 302px;
+  height: 302px;
+  border-radius: 8px;
+}
