--- a/css/styles.css
+++ b/css/styles.css
@@ -101,3 +101,24 @@ hr {
   border: 1px solid var(--clr-neutral-200);
 }
 
+.card-foot {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.author_img {
+  width: 33px;
+  height: 33px;
+  margin-right: 16px;
+}
+
+.create {
+  color: var(--clr-primary-blue);
+}
+
+.name {
+  color: var(--clr-neutral-100);
+}
